--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:focusable="false"
@@ -23,13 +23,18 @@
             android:orientation="vertical"
             android:padding="5dp">
 
-
-            <ImageView
+            <android.support.v7.widget.AppCompatTextView
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:src="@drawable/logo" />
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Register"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
+
 
             <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -44,6 +49,7 @@
 
 
             <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -58,6 +64,7 @@
 
 
             <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -72,6 +79,7 @@
 
 
             <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -86,6 +94,7 @@
 
 
             <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -100,6 +109,7 @@
 
 
             <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -114,6 +124,7 @@
 
 
             <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -128,6 +139,7 @@
 
 
             <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
@@ -142,6 +154,7 @@
 
 
             <android.support.design.widget.TextInputLayout
+                android:textColorHint="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
@@ -171,7 +184,7 @@
                 android:gravity="center"
                 android:padding="15dp"
                 android:text="have an account? Login"
-                android:textColor="@color/black" />
+                android:textColor="@color/white" />
 
         </LinearLayout>
     </ScrollView>
