--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:orientation="vertical">
 
 
@@ -14,51 +13,58 @@
         android:focusableInTouchMode="true"
         android:gravity="center"
         android:orientation="vertical"
-        android:padding="5dp">
+        android:padding="20dp">
 
-        <ImageView
+        <android.support.v7.widget.AppCompatTextView
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:src="@drawable/logo" />
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Welcome to Arropa"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            android:textSize="22sp" />
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
+            android:layout_marginTop="5dp"
+            android:textColorHint="@color/white">
 
             <EditText
                 android:id="@+id/email"
-                android:textSize="14sp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_person_black_24dp"
                 android:hint="Enter Email "
-                android:inputType="textEmailAddress" />
+                android:inputType="textEmailAddress"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
+            android:layout_marginTop="5dp"
+            android:textColorHint="@color/white">
 
             <EditText
-                android:textSize="14sp"
                 android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_lock_black_24dp"
                 android:hint="Enter Password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textSize="14sp" />
         </android.support.design.widget.TextInputLayout>
 
         <Button
             android:id="@+id/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="50dp"
-            android:paddingRight="50dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/btn_back_solid"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp"
             android:text="Login"
             android:textColor="@color/white" />
 
@@ -66,11 +72,15 @@
             android:id="@+id/register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:gravity="center"
-            android:text="Register"
+            android:text="Don't have an account? Register."
+            android:textColor="@color/white"
             android:textSize="14sp"
-            android:textColor="@color/black" />
+            android:visibility="visible" />
+
+
+
 
 
     </LinearLayout>
