--- a/app/src/main/res/layout/itme_product_row.xml
+++ b/app/src/main/res/layout/itme_product_row.xml
@@ -59,28 +59,34 @@
             android:text="Denish shirt | orignal | Quality " />
 
 
-
         <LinearLayout
             android:id="@+id/ll_call_msg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="4dp"
             android:orientation="horizontal">
 
             <android.support.v7.widget.AppCompatButton
                 android:layout_width="0dp"
-                android:layout_height="35dp"
+                android:layout_height="30dp"
                 android:layout_marginRight="1dp"
                 android:layout_weight="1"
+                android:background="@drawable/cart_botton"
+                android:maxLines="1"
                 android:text="Add To Cart"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="12sp" />
 
             <android.support.v7.widget.AppCompatButton
                 android:layout_width="0dp"
-                android:layout_height="35dp"
+                android:layout_height="30dp"
                 android:layout_marginLeft="1dp"
                 android:layout_weight="1"
+                android:background="@drawable/cart_botton"
+                android:maxLines="1"
                 android:text="Buy Now"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textSize="12sp" />
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
