--- a/app/src/main/res/drawable/border_edittext.xml
+++ b/app/src/main/res/drawable/border_edittext.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="@android:color/white"/>
+    <corners android:radius="5dp"/>
 
-    <item>
-        <shape android:shape="rectangle">
-            <color android:color="@android:color/transparent" />
-              <stroke android:color="@color/tabColor" android:width="1dp"/>
-        </shape>
-
-    </item>
-</selector>
+</shape>
