--- a/app/src/main/res/layout/itme_product_row.xml
+++ b/app/src/main/res/layout/itme_product_row.xml
@@ -60,6 +60,7 @@
 
 
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/ll_call_msg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
