--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-   <item android:title="Category"/>
-    <item android:title="Credit Limits"/>
-    <item android:title="Franchise"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <group android:checkableBehavior="single">
+        <item android:title="Home" android:checked="true"/>
+        <item android:title="Orders" />
+        <item android:title="Credit Limits" />
+        <item android:title="FAQ" />
+        <item android:title="Returns"/>
+        <item android:title="Contact Us"/>
+        <item android:title="Terms &amp; Conditions"/>
+        <item android:title="Signout"/>
+
+
+    </group>
 
 </menu>
