--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -2,7 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="150dp">
 
     <android.support.v7.widget.AppCompatImageView
         android:layout_width="match_parent"
@@ -16,28 +16,32 @@
         android:layout_height="match_parent"
         android:layout_marginBottom="5dp"
         android:orientation="vertical">
+
         <android.support.v7.widget.AppCompatImageView
             android:id="@+id/img_user_profile"
             android:layout_width="96dp"
             android:layout_height="96dp"
-            android:src="@drawable/dummy_user"
-            android:scaleType="centerCrop"
             android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="4dp"/>
+            android:layout_marginRight="4dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/dummy_user"
+            android:visibility="gone" />
 
 
         <android.support.v7.widget.AppCompatTextView
             android:id="@+id/username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
             android:layout_centerInParent="true"
+            android:layout_marginLeft="20dp"
             android:layout_toRightOf="@id/img_user_profile"
             android:drawablePadding="5dp"
+            android:ellipsize="end"
             android:gravity="center"
             android:maxLines="1"
-            android:ellipsize="end"
             android:text="Mohit jain"
             android:textAllCaps="true"
             android:textColor="@color/white"
