--- a/app/src/main/res/layout/fragment_product_list.xml
+++ b/app/src/main/res/layout/fragment_product_list.xml
@@ -4,6 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <com.arropa.customviews.AutofitRecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
@@ -11,5 +14,13 @@
         android:clipToPadding="false"
         android:columnWidth="150dp"
         android:padding="5dp"/>
+<android.support.v7.widget.AppCompatTextView
+android:id="@+id/empty_list"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:textStyle="bold"
+    android:text="Product not available"/>
+    </FrameLayout>
 
 </LinearLayout>
